--- a/main.org
+++ b/main.org
@@ -30,5 +30,8 @@
 
 
 
-#+INCLUDE: "QO/Hidrocarbonetos/HidrocarbonetosI.org"
+#+INCLUDE: "QO/Fundamentos/Introducao.org"
 
+#+begin_comment
+https://www.ufsm.br/app/uploads/sites/413/2018/12/quimica_ii.pdf
+#+end_comment
